.provarCaches/00D5h000009Q6XQEA0/objects/provar__Team_Member__c.object
<CustomObject>
    <fields>
        <fullName>provar__Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>provar__Person__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Person</label>
        <referenceTo>provar__Person__c</referenceTo>
        <relationshipLabel>Teams</relationshipLabel>
        <relationshipName>Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Role__c</fullName>
        <label>Role</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Project Test Lead</fullName>
                </value>
                <value>
                    <fullName>Testing Manager</fullName>
                </value>
                <value>
                    <fullName>Test Designer</fullName>
                </value>
                <value>
                    <fullName>Test Approver</fullName>
                </value>
                <value>
                    <fullName>Tester</fullName>
                </value>
                <value>
                    <fullName>Reviewer</fullName>
                </value>
                <value>
                    <fullName>End-user</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Test_Plan__c</fullName>
        <label>Test Plan</label>
        <referenceTo>provar__Test_Plan__c</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Team Member</label>
    <nameField>
        <displayFormat>TTM-{000000}</displayFormat>
        <label>Team Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>